Fix vertical scrollbar issue (for real this time)

--- a/themes/bartoszlegiec/source/css/pages/_article.sass
+++ b/themes/bartoszlegiec/source/css/pages/_article.sass
@@ -63,7 +63,7 @@
   align-items: flex-start
   flex-direction: row-reverse
   height: 100vh
-  width: 100vw
+  width: 100%
   background-size: contain
   background-position: center center
   background-repeat: no-repeat
